# keylogging_analysis

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  setup.py  test_module.ipynb
data/: messages.csv  messages_anonymized.csv
keylogging_analysis/: keylogging_analysis.py
src/: example.py  help-functions.py  help_functions.py  keylogging-analysis.py  keylogging_analysis.py
src/keylogging_analysis/: __init__.py  classes.py  help_functions.py
src/keylogging_analysis/data/: lh_native_message_ids.json  ll_default.csv
tests/: test_smoke.py
