[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "keylogging-analysis"
version = "0.0.2"
authors = [
  {name="Kobe Thonissen", email="kobe.thonissen@gmail.com"}
]
maintainers = [
  {name="Serge Bibauw", email="serge.bibauw@uclouvain.be"}
]
description = "keylogging_analysis is a Python module aimed at processsing and analysing data from the Language Hero (\"lh\") and Language Lab (\"ll\") datasets. It is useful to researchers interested in L2 language fluency, chatbot-student interactions or keylogging data."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: BSD License"
]
license = "BSD-3-Clause"
license-files = ["LICENSE"]
dependencies = [
    "pandas>=1.3",
    "numpy>=1.21",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/kobe-th/keylogging_analysis"
Issues = "https://github.com/kobe-th/keylogging_analysis/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
